--- a/themes/icarus/include/style/navbar.styl
+++ b/themes/icarus/include/style/navbar.styl
@@ -49,5 +49,6 @@ $navbar-item-margin-h ?= 0
             margin-left: 0
 
 .navbar-logo
+    font-weight: bold
     img
         max-height: $logo-height
