--- a/themes/icarus/include/style/codeblock.styl
+++ b/themes/icarus/include/style/codeblock.styl
@@ -42,6 +42,12 @@ figure.highlight
 
     figcaption, .gutter
         background: $codeblock-caption-bg
+        -webkit-touch-callout: none
+        -moz-user-select: none
+        -webkit-user-select: none
+        -ms-user-select: none
+        -khtml-user-select: none
+        user-select: none
 
     figcaption
         margin: 0 !important
