--- a/css/style.css
+++ b/css/style.css
@@ -11281,6 +11281,12 @@ figure.highlight pre code .hljs {
 figure.highlight figcaption,
 figure.highlight .gutter {
   background: rgba(200,200,200,0.15);
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
 }
 figure.highlight figcaption {
   margin: 0 !important;
